--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,10 +1,3 @@
-
-
-
-
-/*//////////////////////////////////////////////////////////////////
-[ FONT ]*/
-
 @font-face {
   font-family: Ubuntu-Regular;
   src: url('../fonts/ubuntu/Ubuntu-Regular.ttf'); 
@@ -20,11 +13,6 @@
   src: url('../fonts/JosefinSans/JosefinSans-Bold.ttf'); 
 }
 
-
-
-/*//////////////////////////////////////////////////////////////////
-[ RESTYLE TAG ]*/
-
 * {
 	margin: 0px; 
 	padding: 0px; 
@@ -36,7 +24,6 @@ body, html {
 	font-family: Ubuntu-Regular, sans-serif;
 }
 
-/*---------------------------------------------*/
 a {
 	font-family: Ubuntu-Regular;
 	font-size: 14px;
@@ -58,7 +45,6 @@ a:hover {
   color: #1b3815;
 }
 
-/*---------------------------------------------*/
 h1,h2,h3,h4,h5,h6 {
 	margin: 0px;
 }
@@ -67,7 +53,7 @@ p {
 	font-family: Ubuntu-Regular;
 	font-size: 14px;
 	line-height: 1.7;
-	color: #666666;
+	color: #ffffff;
 	margin: 0px;
 }
 
@@ -76,8 +62,6 @@ ul, li {
 	list-style-type: none;
 }
 
-
-/*---------------------------------------------*/
 input {
 	outline: none;
 	border: none;
@@ -114,7 +98,6 @@ textarea:-moz-placeholder { color: #1b3815;}
 textarea::-moz-placeholder { color: #1b3815;}
 textarea:-ms-input-placeholder { color: #1b3815;}
 
-/*---------------------------------------------*/
 button {
 	outline: none !important;
 	border: none;
@@ -129,12 +112,10 @@ iframe {
 	border: none !important;
 }
 
-/*//////////////////////////////////////////////////////////////////
-[ Utility ]*/
 .txt1 {
   font-family: Ubuntu-Regular;
   font-size: 15px;
-  color: #999999;
+  color: #ffffff;
   line-height: 1.4;
 }
 
@@ -153,15 +134,6 @@ iframe {
   text-transform: uppercase;
 }
 
-
-/*//////////////////////////////////////////////////////////////////
-[ login ]*/
-
-.limiter {
-  width: 100%;
-  margin: 0 auto;
-}
-
 .container-login100 {
   width: 100%;  
   min-height: 100vh;
@@ -173,26 +145,18 @@ iframe {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 15px;
   position: relative;
-  background-color: #fff;
+  background: linear-gradient(rgba(0, 0, 0, 0.70), rgba(0, 0, 0, 0.70)),url('/media/plane.jpg');
+  background-attachment:scroll;
+  background-size:cover;
 }
 
 .wrap-login100 {
   width: 500px;
-  background: #fff;
+  background: transparent;
   border-radius: 20px;
   overflow: hidden;
-  box-shadow: 0 3px 20px 0px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 3px 20px 0px rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: 0 3px 20px 0px rgba(0, 0, 0, 0.1);
-  -o-box-shadow: 0 3px 20px 0px rgba(0, 0, 0, 0.1);
-  -ms-box-shadow: 0 3px 20px 0px rgba(0, 0, 0, 0.1);
 }
-
-
-/*==================================================================
-[ Form ]*/
 
 .login100-form {
   width: 100%;
@@ -200,24 +164,20 @@ iframe {
 }
 
 .login100-form-title {
-  font-family: JosefinSans-Bold;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 500;
   font-size: 30px;
-  color: #fff;
+  color: #1bbd36;
   line-height: 1.2;
   text-align: center;
+  padding-top: 40px;
 
   display: block;
   position: absolute;
   width: 100%;
-  top: 0;
+  top: 60px;
   left: 0;
-  background-color: #57b846;
-  padding-top: 50px;
-  padding-bottom: 39px;
 }
-
-/*------------------------------------------------------------------
-[ Input ]*/
 
 .wrap-input100 {
   width: 100%;
@@ -239,12 +199,16 @@ iframe {
   height: 55px;
   background: #ebebeb;
   border-radius: 27px;
-  padding: 0 35px 0 35px;
+  padding: 0 15px 0 15px;
 }
 
+.form-check-label{
+  color: #fafafa;
+}
 
-/*------------------------------------------------------------------
-[ Focus Input ]*/
+.form-check-label a{
+  font-size: 18px;
+}
 
 .focus-input100 {
   display: block;
@@ -273,8 +237,6 @@ iframe {
   width: calc(100% + 20px);
 }
 
-/*------------------------------------------------------------------
-[ Button ]*/
 .container-login100-form-btn {
   width: 100%;
   display: -webkit-box;
@@ -294,10 +256,9 @@ iframe {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 20px;
   width: 100%;
   height: 50px;
-  background-color: #57b846;
+  background-color: #020301;
   border-radius: 25px;
 
   font-family: Ubuntu-Bold;
@@ -313,81 +274,13 @@ iframe {
 }
 
 .login100-form-btn:hover {
-  background-color: #1b3815;
+  background-color: #1bbd36;
 }
-
-
-/*------------------------------------------------------------------
-[ Alert validate ]*/
 
 .validate-input {
   position: relative;
 }
 
-.alert-validate::before {
-  content: attr(data-validate);
-  position: absolute;
-  z-index: 1000;
-  max-width: 70%;
-  background-color: #fff;
-  border: 1px solid #c80000;
-  border-radius: 14px;
-  padding: 4px 25px 4px 10px;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%);
-  right: 10px;
-  pointer-events: none;
-
-  font-family: Ubuntu-Bold;
-  color: #c80000;
-  font-size: 13px;
-  line-height: 1.4;
-  text-align: left;
-
-  visibility: hidden;
-  opacity: 0;
-
-  -webkit-transition: opacity 0.4s;
-  -o-transition: opacity 0.4s;
-  -moz-transition: opacity 0.4s;
-  transition: opacity 0.4s;
-}
-
-.alert-validate::after {
-  content: "\f06a";
-  font-family: FontAwesome;
-  display: block;
-  position: absolute;
-  z-index: 1100;
-  color: #c80000;
-  font-size: 16px;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%);
-  right: 16px;
-}
-
-.alert-validate:hover:before {
-  visibility: visible;
-  opacity: 1;
-}
-
-@media (max-width: 992px) {
-  .alert-validate::before {
-    visibility: visible;
-    opacity: 1;
-  }
-}
-
-/*//////////////////////////////////////////////////////////////////
-[ Responsive ]*/
 @media (max-width: 576px) {
   .login100-form {
     padding-left: 15px;
