--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -167,7 +167,7 @@ iframe {
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 500;
   font-size: 30px;
-  color: #1bbd36;
+  color: #1ae63c;
   line-height: 1.2;
   text-align: center;
   padding-top: 40px;
