--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -892,7 +892,7 @@ video::-webkit-media-controls {
   font-size: 18px;
   font-weight: bold;
   margin: 10px 0 5px 0;
-  color: #111;
+  color: #1bbd36;
 }
 
 .testimonials .testimonial-item h4 {
