--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1168,3 +1168,22 @@ video::-webkit-media-controls {
   color: #fff;
   text-decoration: none;
 }
+
+#packages{
+  background: linear-gradient(rgba(0, 0, 0, 0.70), rgba(0, 0, 0, 0.70)),url('/media/bg-2.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.card{
+  width: 30rem;
+}
+
+.card-title{
+  color: #1bbd36;
+}
+
+.card .btn{
+  background-color: #1bbd36;
+  border-color: #1bbd36;
+}
