--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1181,9 +1181,26 @@ video::-webkit-media-controls {
 
 .card-title{
   color: #1bbd36;
+  font-size: 30px;
 }
 
 .card .btn{
   background-color: #1bbd36;
   border-color: #1bbd36;
+}
+
+@media(max-width:900px){
+  .card{
+    width: 20rem;
+  }
+  .card-title{
+    font-size: 20px;
+  }
+}
+
+@media(max-width:510px){
+  #packages .col{
+    padding-left: 1.5rem;
+    padding-bottom: 2rem;
+  }
 }
