--- a/assets/css/booking.css
+++ b/assets/css/booking.css
@@ -94,7 +94,7 @@
 	text-transform: uppercase;
 	line-height: 24px;
 	height: 24px;
-	font-size: 14px;
+	font-size: 17px;
 	color: #fff;
 }
 
@@ -166,16 +166,87 @@ h1{
 	background-color: #1bbd36;
 	font-weight: 400;
 	height: 50px;
-	font-size: 14px;
+	font-size: 18px;
 	border: none;
 	width: 100%;
 	border-radius: 40px;
 	text-transform: uppercase;
 	-webkit-transition: 0.2s all;
-	transition: 0.2s all;
+	transition: 0.2s all ease-in-out;
 }
 
 .booking-form .submit-btn:hover,
 .booking-form .submit-btn:focus {
-	opacity: 0.9;
+	color: #191a1e;
+	transform: scale(0.9);
+	box-shadow: none;
+}
+
+input[type=number] {
+    background-color: #343a40;
+    border: 2px solid #ffffff;
+    color: #ffffff;
+    font-size: 12px;
+	text-align: center;
+}
+
+input[type=number]:focus {
+    border: 2px solid #1bbd36;
+    box-shadow: none;
+    font-size: 18px;
+}
+
+input[type=text]:focus {
+    border: 2px solid #1bbd36;
+    box-shadow: none;
+    font-size: 18px;
+}
+
+input[type=email]:focus {
+    border: 2px solid #1bbd36;
+    box-shadow: none;
+    font-size: 18px;
+}
+
+input[type=date]:focus {
+    border: 2px solid #1bbd36;
+    box-shadow: none;
+    font-size: 18px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=range]{
+    -webkit-appearance: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+    width: 300px;
+    height: 5px;
+    background: #ffffff;
+    border: none;
+    border-radius: 3px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    border: none;
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    background: #1bbd36;
+    margin-top: -4px;
+}
+input[type=range]::-webkit-slider-thumb:hover {
+    -webkit-appearance: none;
+    background: #ffffff;
+}
+
+input[type=range]:hover::-webkit-slider-runnable-track {
+    cursor: pointer;
+    background: #1bbd36;
 }
