--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,115 +1,116 @@
 @font-face {
   font-family: Ubuntu-Regular;
-  src: url('../fonts/ubuntu/Ubuntu-Regular.ttf'); 
+  src: url("../fonts/ubuntu/Ubuntu-Regular.ttf");
 }
 
 @font-face {
   font-family: Ubuntu-Bold;
-  src: url('../fonts/ubuntu/Ubuntu-Bold.ttf'); 
+  src: url("../fonts/ubuntu/Ubuntu-Bold.ttf");
 }
 
 @font-face {
   font-family: JosefinSans-Bold;
-  src: url('../fonts/JosefinSans/JosefinSans-Bold.ttf'); 
+  src: url("../fonts/JosefinSans/JosefinSans-Bold.ttf");
 }
 
 * {
-	margin: 0px; 
-	padding: 0px; 
-	box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
-body, html {
-	height: 100%;
-	font-family: Ubuntu-Regular, sans-serif;
+body,
+html {
+  height: 100%;
+  font-family: Ubuntu-Regular, sans-serif;
 }
 
 a {
-	font-family: Ubuntu-Regular;
-	font-size: 14px;
-	line-height: 1.7;
-	color: #666666;
-	margin: 0px;
-	transition: all 0.4s;
-	-webkit-transition: all 0.4s;
+  font-family: Ubuntu-Regular;
+  font-size: 14px;
+  line-height: 1.7;
+  color: #666666;
+  margin: 0px;
+  transition: all 0.4s;
+  -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
   -moz-transition: all 0.4s;
 }
 
 a:focus {
-	outline: none !important;
+  outline: none !important;
 }
 
 a:hover {
-	text-decoration: none;
+  text-decoration: none;
   color: #1b3815;
 }
 
-h1,h2,h3,h4,h5,h6 {
-	margin: 0px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0px;
 }
 
 p {
-	font-family: Ubuntu-Regular;
-	font-size: 14px;
-	line-height: 1.7;
-	color: #ffffff;
-	margin: 0px;
-}
-
-ul, li {
-	margin: 0px;
-	list-style-type: none;
+  font-family: Ubuntu-Regular;
+  font-size: 14px;
+  line-height: 1.7;
+  color: #ffffff;
+  margin: 0px;
 }
 
 input {
-	outline: none;
-	border: none;
-}
-
-input[type="number"] {
-    -moz-appearance: textfield;
-    appearance: none;
-    -webkit-appearance: none;
-}
-
-input[type="number"]::-webkit-outer-spin-button,
-input[type="number"]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-}
-
-textarea {
   outline: none;
   border: none;
 }
 
-textarea:focus, input:focus {
+textarea:focus,
+input:focus {
   border-color: transparent !important;
 }
 
+input::-webkit-input-placeholder {
+  color: #1b3815;
+}
+input:-moz-placeholder {
+  color: #1b3815;
+}
+input::-moz-placeholder {
+  color: #1b3815;
+}
+input:-ms-input-placeholder {
+  color: #1b3815;
+}
 
-input::-webkit-input-placeholder { color: #1b3815;}
-input:-moz-placeholder { color: #1b3815;}
-input::-moz-placeholder { color: #1b3815;}
-input:-ms-input-placeholder { color: #1b3815;}
-
-textarea::-webkit-input-placeholder { color: #1b3815;}
-textarea:-moz-placeholder { color: #1b3815;}
-textarea::-moz-placeholder { color: #1b3815;}
-textarea:-ms-input-placeholder { color: #1b3815;}
+textarea::-webkit-input-placeholder {
+  color: #1b3815;
+}
+textarea:-moz-placeholder {
+  color: #1b3815;
+}
+textarea::-moz-placeholder {
+  color: #1b3815;
+}
+textarea:-ms-input-placeholder {
+  color: #1b3815;
+}
 
 button {
-	outline: none !important;
-	border: none;
-	background: transparent;
+  outline: none !important;
+  border: none;
+  background: transparent;
 }
 
 button:hover {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 iframe {
-	border: none !important;
+  border: none !important;
 }
 
 .txt1 {
@@ -135,7 +136,7 @@ iframe {
 }
 
 .container-login100 {
-  width: 100%;  
+  width: 100%;
   min-height: 100vh;
   display: -webkit-box;
   display: -webkit-flex;
@@ -146,9 +147,10 @@ iframe {
   justify-content: center;
   align-items: center;
   position: relative;
-  background: linear-gradient(rgba(0, 0, 0, 0.70), rgba(0, 0, 0, 0.70)),url('/media/plane.jpg');
-  background-attachment:scroll;
-  background-size:cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url("/media/plane.jpg");
+  background-attachment: scroll;
+  background-size: cover;
 }
 
 .wrap-login100 {
@@ -164,18 +166,14 @@ iframe {
 }
 
 .login100-form-title {
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 500;
-  font-size: 30px;
-  color: #1ae63c;
+  font-size: 40px;
+  color: #1bbd36;
   line-height: 1.2;
   text-align: center;
-  padding-top: 40px;
-
   display: block;
-  position: absolute;
   width: 100%;
-  top: 60px;
   left: 0;
 }
 
@@ -202,11 +200,11 @@ iframe {
   padding: 0 15px 0 15px;
 }
 
-.form-check-label{
+.form-check-label {
   color: #fafafa;
 }
 
-.form-check-label a{
+.form-check-label a {
   font-size: 18px;
 }
 
@@ -226,15 +224,17 @@ iframe {
   border-radius: 31px;
   background-color: #ebebeb;
   pointer-events: none;
-  
+
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
   -moz-transition: all 0.4s;
   transition: all 0.4s;
 }
 
-.input100:focus + .focus-input100 {
-  width: calc(100% + 20px);
+input:focus {
+  border: 2px solid #1bbd36;
+  box-shadow: none;
+  font-size: 18px;
 }
 
 .container-login100-form-btn {
@@ -256,9 +256,9 @@ iframe {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 50%;
   height: 50px;
-  background-color: #020301;
+  background-color: #111;
   border-radius: 25px;
 
   font-family: Ubuntu-Bold;
