added check booking record

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -164,7 +164,7 @@ iframe {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 500;
   font-size: 40px;
-  color: #1bbd36;
+  color: #1ed33c;
   line-height: 1.2;
   text-align: center;
   display: block;
